--- a/arch/arm64/configs/mojito_defconfig
+++ b/arch/arm64/configs/mojito_defconfig
@@ -827,9 +827,10 @@ CONFIG_TCP_CONG_WESTWOOD=y
 # CONFIG_TCP_CONG_DCTCP is not set
 # CONFIG_TCP_CONG_CDG is not set
 CONFIG_TCP_CONG_BBR=y
-CONFIG_DEFAULT_CUBIC=y
+CONFIG_TCP_CONG_BBR2=y
+CONFIG_DEFAULT_BBR=y
 # CONFIG_DEFAULT_WESTWOOD is not set
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_DEFAULT_TCP_CONG="bbr"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
