Added DC dimming
Mojito uses PWM for backlight dimming, Which causes eye strain.
Add option for DC dimming so as to mitigate the same.
Kanged from Sony archives and parts from PixelExperience/kernel_xiaomi_sweet

--- a/drivers/gpu/drm/msm/Kconfig
+++ b/drivers/gpu/drm/msm/Kconfig
@@ -179,6 +179,14 @@ config DRM_MSM_DSI_14NM_PHY
 	help
 	  Choose this option if DSI PHY on 8996 is used on the platform.
 
+config EXPOSURE_ADJUSTMENT
+	bool "Enable exposure adjustment driver"
+	depends on DRM_MSM
+	default y
+	help
+          The EXPOSURE ADJUSTMENT provides exposure adjustment function without change
+          panel hardware brightness to avoid PWM flicker on OLED devices.
+
 config DRM_MSM_KCAL_CTRL
 	bool "Enable kernel-level color calibration control"
 	depends on DRM_MSM
