--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ jobs:
    steps:
       - run:
           command: |
-           git config --global user.name "venom-stark"
-           git config --global user.email "sachidanandabehera562@gmail.com"
+           git config --global user.name "YashRahate"
+           git config --global user.email "yrahate7@gmail.com"
            git config --global color.ui false
            git clone --depth=1 https://github.com/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME} -b ${CIRCLE_BRANCH} .
            bash .circleci/build.sh
