--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04-lts
     steps:
     - name: Checkout kernel source
       uses: actions/checkout@v2
@@ -28,7 +28,7 @@ jobs:
         path: zipper
 
     - name: Android kernel build
-      uses: lemniskett/android-kernel-actions@master
+      uses: Yrahate7/android-kernel-actions@master
       id: build
       env:
         NAME: Dark-Ages-Último
