--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-    runs-on: ubuntu-18.04-lts
+    runs-on: ubuntu-18.04
     steps:
     - name: Checkout kernel source
       uses: actions/checkout@v2
