--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,18 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CI
+
+# Controls when the workflow will run
 on:
-  watch:
-    types: [started]
+  # Triggers the workflow on push or pull request events but only for the yr-main branch
+  push:
+    branches: [ yr-main ]
+  pull_request:
+    branches: [ yr-main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 
 jobs:
   KernelMojito:
