--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           git clone https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86 --depth=1
           mv linux-x86/clang-r416183c clang
           rm -rf linux-x86
-          git clone --depth=1 https://github.com/venom-stark/AnyKernel3.git -b main
+          git clone --depth=1 https://github.com/venom-stark/AnyKernel3.git
       - name: Export toolchain and setup args
         run: |
           CLANG_DIR=../clang
