--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,10 @@ jobs:
           args="O=../out ARCH=arm64 CC=${CLANG_DIR}/bin/clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi- LD=${CLANG_DIR}/bin/ld.lld"
           cd kernel-mojito
           make ${args} mojito_defconfig
-          make -j$(nproc --all) ${args}
+          make -j16
       - name: send artifacts
         run: |
           cp out/arch/arm64/boot/Image.gz-dtb AnyKernel3/
-          cp out/arch/arm64/boot/dtbo.img AnyKernel3/
           cd AnyKernel3
           VERSION="$(cat ../kernel-mojito/arch/arm64/configs/mojito_defconfig | grep "CONFIG_LOCALVERSION\=" | sed -r 's/.*"(.+)".*/\1/' | sed 's/^.//')"
           7z a -mx9 ${VERSION}.zip *
