--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           args="O=../out ARCH=arm64 CC=${CLANG_DIR}/bin/clang CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-gnu- CROSS_COMPILE_ARM32=arm-linux-gnueabi- LD=${CLANG_DIR}/bin/ld.lld"
           cd kernel-mojito
           make ${args} mojito_defconfig
-          make -j16
+          make -j16 ${args}
       - name: send artifacts
         run: |
           cp out/arch/arm64/boot/Image.gz-dtb AnyKernel3/
