--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,13 @@ on:
   # Triggers the workflow on push or pull request events but only for the yr-main branch
   push:
     branches: [ yr-main ]
+    tags:
+    - '*'
   pull_request:
     branches: [ yr-main ]
+    tags:
+    - '*'
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
