--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,16 +4,8 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the yr-main branch
   push:
-    branches: [ yr-main ]
-    tags:
-    - '*'
-  pull_request:
-    branches: [ yr-main ]
-    tags:
-    - '*'
-
+    tags: '*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
