--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,4 @@ jobs:
         with:
           artifacts: "./kernel-mojito_cmi.zip"
           token: ${{ secrets.GITHUB_TOKEN }}
+          allowUpdates: true
